[gd_scene load_steps=16 format=1]

[ext_resource path="res://src/world/hud.gd" type="Script" id=1]
[ext_resource path="res://art/fonts/futura.fnt" type="BitmapFont" id=2]
[ext_resource path="res://art/fonts/yanone.fnt" type="BitmapFont" id=3]
[ext_resource path="res://art/sprites/score_sprite_star.png" type="Texture" id=4]
[ext_resource path="res://art/sprites/tail_icon.png" type="Texture" id=5]
[ext_resource path="res://art/sprites/life_icon.png" type="Texture" id=6]
[ext_resource path="res://art/sprites/lock_big.png" type="Texture" id=7]
[ext_resource path="res://src/world/controls/dpad.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/world/controls/slider.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]

resource/name = "top_left_visibility"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bottom_left:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}

[sub_resource type="Animation" id=2]

resource/name = "bottom_right_visibility"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("bottom_right:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}

[sub_resource type="Animation" id=3]

resource/name = "top_left_visibility"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("top_left:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}

[sub_resource type="Animation" id=4]

resource/name = "top_right_visibility"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("top_right:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.2 ]
}

[sub_resource type="Animation" id=5]

length = 0.2
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("score:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("score:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.05, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 376, 4 ), Vector2( 370, -10 ), Vector2( 388, 25 ), Vector2( 378, 8 ) ]
}

[sub_resource type="Animation" id=6]

resource/name = "life"
length = 0.3
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ankh:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.18, 0.3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ankh:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.12, 0.18, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.15, 0.15 ), Vector2( 0.3, 0.3 ), Vector2( 0.2, 0.2 ) ]
}

[node name="hud" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="ui" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 960.0
__meta__ = {
"_edit_lock_": true
}

[node name="animation" type="AnimationPlayer" parent="ui"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bottom_left_visibility = SubResource( 1 )
anims/bottom_right_visibility = SubResource( 2 )
anims/top_left_visibility = SubResource( 3 )
anims/top_right_visibility = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="top_left" type="Container" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 21.0
margin/right = 338.0
margin/bottom = 185.0

[node name="score" type="Label" parent="ui/top_left"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 61.0
margin/top = -32.0
margin/right = 154.0
margin/bottom = 176.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fps" type="Label" parent="ui/top_left"]

rect/scale = Vector2( 1.3, 1.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 192.0
margin/top = -15.0
margin/right = 285.0
margin/bottom = 37.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.116438, 0.0384521, 0.492188, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="ui/top_left"]

transform/pos = Vector2( 18.7675, 18.3682 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="top_right" type="Container" parent="ui"]

visibility/opacity = 0.9
anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 438.0
margin/top = 1.0
margin/right = -263.0
margin/bottom = 109.0

[node name="score" type="Label" parent="ui/top_right"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 259.0
margin/top = -20.0
margin/right = 371.0
margin/bottom = 188.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lifes" type="Label" parent="ui/top_right"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 508.0
margin/top = -18.0
margin/right = 586.0
margin/bottom = 190.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="locks_count" type="Label" parent="ui/top_right"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 54.0
margin/top = -18.0
margin/right = 132.0
margin/bottom = 190.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tail" type="Sprite" parent="ui/top_right"]

transform/pos = Vector2( 210.178, 54.5217 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="animation" type="AnimationPlayer" parent="ui/top_right"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/label = SubResource( 5 )
anims/life = SubResource( 6 )
anims/score = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ankh" type="Sprite" parent="ui/top_right"]

transform/pos = Vector2( 460.714, 58.2102 )
transform/rot = 360.0
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="locks" type="Sprite" parent="ui/top_right"]

transform/pos = Vector2( 11.6506, 53.1547 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="bottom_right" type="Container" parent="ui"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = 426.0
margin/right = -41.0
margin/bottom = -35.0

[node name="gamepad" parent="ui/bottom_right" instance=ExtResource( 8 )]

[node name="bottom_left" type="Container" parent="ui"]

visibility/opacity = 0.2
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 447.0
margin/right = 525.0
margin/bottom = -22.0

[node name="gamepad" parent="ui/bottom_left" instance=ExtResource( 9 )]

transform/pos = Vector2( 268.877, 225.419 )

[node name="center" type="Container" parent="ui"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 176.0
margin/right = -186.0
margin/bottom = -182.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="command" from="ui/bottom_right/gamepad" to="." method="_on_gamepad_command"]

[connection signal="command" from="ui/bottom_left/gamepad" to="." method="_on_gamepad_command"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


